--- a/n/ne/new/newson6.com.html
+++ b/n/ne/new/newson6.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the newson6.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606013217id_/http%3A//www.newson6.com/global/story.asp%3Fs%3D18990) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newson6.com privacy policy that was archived on 2017-09-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170901183148id_/http%3A//www.newson6.com/global/story.asp%3Fs%3D18990) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><!--[if lt IE 7]><html lang="en" class="ie6"><![endif]--><!--[if IE 7]><html lang="en" class="ie7"><![endif]--><!--[if IE 8]><html lang="en" class="ie8"><![endif]--><!--[if IE 9]><html lang="en" class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><html lang="en"><![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><!--Customized JS Includes - prehead--><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-WV2QLD&amp;l=franklyDataLayer"></script><script type="text/javascript" async="" src="https://cdn.krxd.net/controltag?confid=qv9kc1szr"></script><script src="//worldnow-d.openx.net/w/1.0/jstag?nc=43459271-wnow"></script><script class="kxct" data-id="qv9kc1szr" data-timing="async" data-version="2.0" type="text/javascript">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><!--[if lt IE 7]><html lang="en" class="ie6"><![endif]--><!--[if IE 7]><html lang="en" class="ie7"><![endif]--><!--[if IE 8]><html lang="en" class="ie8"><![endif]--><!--[if IE 9]><html lang="en" class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><html lang="en"><![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><!--Customized Stylesheet Includes - prehead--><!--Customized JS Includes - prehead--><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-WV2QLD&amp;l=franklyDataLayer"></script><script type="text/javascript" async="" src="https://cdn.krxd.net/controltag?confid=qv9kc1szr"></script><script class="kxct" data-id="qv9kc1szr" data-timing="async" data-version="2.0" type="text/javascript">
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
                 var k=document.createElement('script');k.type='text/javascript';k.async=true;
@@ -36,21 +36,21 @@
             })();
             
         </script><title>This Web Site’s Privacy Policy - NewsOn6.com - Tulsa, OK - News, Weather, Video and Sports - KOTV.com | </title>
-<meta name="Description" content="NewsOn6.com is your local source for information in Tulsa, delivering breaking news, weather, sports, lifestyle and classifieds."><meta name="KEYWORDS" content="tulsa,media,news,weather,tv,cbs,local,tornado,storm,oklahoma,kotv.com,channel 6,channel six,green country,television,the news on 6,the news on six,six in the morning,live"><meta name="news_keywords" content="tulsa,media,news,weather,tv,cbs,local,tornado,storm,oklahoma,kotv.com,channel 6,channel six,green country,television,the news on 6,the news on six,six in the morning,live"><meta name="ROBOTS" content="index,follow,noarchive"><meta name="date" content="1999/11/17"><meta name="owner" content="WorldNow"><meta name="wn-version" content="ContainerE-Story"><meta name="wn-build" content="Container-E.98"><meta name="wn-base" content="IIS30"><meta name="wnreadableurl" content="this-web-sites-privacy-policy"><meta property="og:title" content="This Web Site’s Privacy Policy"><meta property="og:type" content="article"><meta property="og:url" content="http://www.newson6.com/story/18990/this-web-sites-privacy-policy"><meta property="og:description" content="NewsOn6.com is your local source for information in Tulsa, delivering breaking news, weather, sports, lifestyle and classifieds."><link rel="canonical" href="http://www.newson6.com/story/18990/this-web-sites-privacy-policy"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="This Web Site’s Privacy Policy"><meta name="twitter:description" content="NewsOn6.com is your local source for information in Tulsa, delivering breaking news, weather, sports, lifestyle and classifieds."><!--Customized Page Includes - Meta--><meta property="fb:pages" content="305051092836">
+<meta name="Description" content="NewsOn6.com is your local source for information in Tulsa, delivering breaking news, weather, sports, lifestyle and classifieds."><meta name="KEYWORDS" content="tulsa,media,news,weather,tv,cbs,local,tornado,storm,oklahoma,kotv.com,channel 6,channel six,green country,television,the news on 6,the news on six,six in the morning,live"><meta name="news_keywords" content="tulsa,media,news,weather,tv,cbs,local,tornado,storm,oklahoma,kotv.com,channel 6,channel six,green country,television,the news on 6,the news on six,six in the morning,live"><meta name="ROBOTS" content="index,follow,noarchive"><meta name="date" content="1999/11/17"><meta name="owner" content="WorldNow"><meta name="wn-version" content="ContainerE-Story"><meta name="wn-build" content="release-7.3.9-Hotfix-SMEV-641-Override.1"><meta name="wn-base" content="IIS27"><meta name="wnreadableurl" content="this-web-sites-privacy-policy"><meta property="og:title" content="This Web Site’s Privacy Policy"><meta property="og:type" content="article"><meta property="og:url" content="http://www.newson6.com/story/18990/this-web-sites-privacy-policy"><meta property="og:description" content="NewsOn6.com is your local source for information in Tulsa, delivering breaking news, weather, sports, lifestyle and classifieds."><link rel="canonical" href="http://www.newson6.com/story/18990/this-web-sites-privacy-policy"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="This Web Site’s Privacy Policy"><meta name="twitter:description" content="NewsOn6.com is your local source for information in Tulsa, delivering breaking news, weather, sports, lifestyle and classifieds."><!--Customized Page Includes - Meta--><meta property="fb:pages" content="305051092836">
 <!--
                 Page Include: META--><meta name="verify-v1" content="67+ifqPKEX7ZTB2sopjxTD1c6nx6ScxupNN92EqnIpc="><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta property="fb:app_id" content="497059410331845"><!--
                 END Page Include: META-->
 
-<link type="text/css" rel="stylesheet" media="all" href="http://content.worldnow.com/global/css/_pub/platform.min.css?ver=Container-E.98_7.3.9.93">
-<link type="text/css" rel="stylesheet" media="all" href="http://KOTV.images.worldnow.com/interface/css/container-e.css?ver=2017-05-26%2014%3A11%3A35_7.3.9.93">
+<link type="text/css" rel="stylesheet" media="all" href="http://content.worldnow.com/global/css/_pub/platform.min.css?ver=release-7.3.9-Hotfix-SMEV-641-Override.1_7.3.9.93">
+<link type="text/css" rel="stylesheet" media="all" href="http://KOTV.images.worldnow.com/interface/css/container-e.css?ver=2017-08-07%2016%3A48%3A13_7.3.9.93">
 
-<link rel="stylesheet" media="print" href="http://content.worldnow.com/global/css/_pub/print/story.css?ver=7.3.9.93_Container-E.98" type="text/css"><!--
-            [if lt IE 6]><link type="text/css" rel="stylesheet" media="screen" href="http://content.worldnow.com/global/css/_pub/quirks/iequirks.css?ver=Container-E.98"><![endif]
+<link rel="stylesheet" media="print" href="http://content.worldnow.com/global/css/_pub/print/story.css?ver=7.3.9.93_release-7.3.9-Hotfix-SMEV-641-Override.1" type="text/css"><!--
+            [if lt IE 6]><link type="text/css" rel="stylesheet" media="screen" href="http://content.worldnow.com/global/css/_pub/quirks/iequirks.css?ver=release-7.3.9-Hotfix-SMEV-641-Override.1"><![endif]
         -->
 <!--
-            [if lt IE 7]><link type="text/css" rel="stylesheet" media="screen" href="http://content.worldnow.com/global/css/_pub/quirks/ie6quirks.css?ver=Container-E.98"><![endif]
+            [if lt IE 7]><link type="text/css" rel="stylesheet" media="screen" href="http://content.worldnow.com/global/css/_pub/quirks/ie6quirks.css?ver=release-7.3.9-Hotfix-SMEV-641-Override.1"><![endif]
         --><!--
-            [if lt IE 10]><link type="text/css" rel="stylesheet" media="screen" href="http://content.worldnow.com/global/css/_pub/quirks/ie9quirks.css?ver=Container-E.98"><![endif]
+            [if lt IE 10]><link type="text/css" rel="stylesheet" media="screen" href="http://content.worldnow.com/global/css/_pub/quirks/ie9quirks.css?ver=release-7.3.9-Hotfix-SMEV-641-Override.1"><![endif]
         -->
 <!--MENU INCLUDES--><style type="text/css">#menu682 UL
                     , #menu682 .wnHorizontal { background-color: #4D4D4D; font-family: Arial; font-size: 11px; font-weight: 700; color: #bfbfbf; }
@@ -99,7 +99,7 @@
             
 wng_pageInfo.body = {};
 wng_pageInfo.taxonomy = {};
-wng_pageInfo.build='Container-E.98';
+wng_pageInfo.build='release-7.3.9-Hotfix-SMEV-641-Override.1';
 wng_pageInfo.template='ContainerE-Story';
 wng_pageInfo.isPreviewSite=false;
 wng_pageInfo.containerType='S';
@@ -156,16 +156,16 @@ wng_pageInfo.ads["52"]={id:"52",wnsz:"52",ownerinfo:{oldformat:1,owner:'loc',spl
 /*Ad wnsz_63 is disabled (or not defined) at a SITE level.*/
 /*Ad wnsz_85 is disabled (or not defined) at a SITE level.*/
 /*Ad wnsz_86 is disabled (or not defined) at a SITE level.*/
-</script>
-<script type="text/javascript" src="http://KOTV.images.worldnow.com/interface/js/wnaffiliateconfig.js?ver=2017-05-26%2014%3A11%3A35_7.3.9.93"></script>
-<script type="text/javascript" src="http://content.worldnow.com/global/js/_pub/KOTV.config.js?ver=Container-E.98_7.3.9.93"></script>
-<script type="text/javascript" src="http://content.worldnow.com/global/js/_pub/platform.min.js?ver=Container-E.98_7.3.9.93"></script>
+wng_pageInfo.adsettings={disableInitialLoad:true};</script>
+<script type="text/javascript" src="http://KOTV.images.worldnow.com/interface/js/wnaffiliateconfig.js?ver=2017-08-07%2016%3A48%3A13_7.3.9.93"></script>
+<script type="text/javascript" src="http://content.worldnow.com/global/js/_pub/KOTV.config.js?ver=release-7.3.9-Hotfix-SMEV-641-Override.1_7.3.9.93"></script>
+<script type="text/javascript" src="http://content.worldnow.com/global/js/_pub/platform.min.js?ver=release-7.3.9-Hotfix-SMEV-641-Override.1_7.3.9.93"></script>
 <!--Ad sense not required CURRENT--><script type="text/javascript">
             if(Worldnow.EventMan){Worldnow.EventMan.event('head-javascript-done');}
         </script><!--
                 Page Include: HEAD--><link type="text/css" rel="stylesheet" media="all" href="http://ftpcontent.worldnow.com/kotv/css/gnm2.css"><link rel="alternate" type="application/rss+xml" title="News" href="http://www.newson6.com/global/category.asp?c=112042&amp;clienttype=rss"> <link rel="alternate" type="application/rss+xml" title="News - Video" href="http://www.newson6.com/global/category.asp?c=118582&amp;clienttype=rssmedia"> <link rel="alternate" type="application/rss+xml" title="Weather Forecast" href="http://ftpcontent.worldnow.com/kotv/warnteamforecast.rss"><script type="text/javascript" src="http://ftpcontent.worldnow.com/kotv/custom/custom.js"></script><link type="text/css" rel="stylesheet" media="all" href="http://ftpcontent.worldnow.com/kotv/custom/custom.css"><script type="text/javascript" src="http://ftpcontent.worldnow.com/kotv/js/gnm2.js"></script><!--
                 END Page Include: HEAD-->
-<!--Customized Page Includes - Head--><script src="http://launch.newsinc.com/js/embed.js" id="_nw2e-js" type="text/javascript"></script><script src="http://ftpcontent.worldnow.com/professionalservices/modules/perfectpixel/kotv.js "></script></head><body id="WNAffKOTV" class="wnContainerType-story wnCenterAlignment story"><!--Google Tag Manager - Analytics Key available for GTM implementation-->
+<!--Customized Page Includes - Head--><script src="http://launch.newsinc.com/js/embed.js" id="_nw2e-js" type="text/javascript"></script><script src="http://ftpcontent.worldnow.com/professionalservices/modules/perfectpixel/kotv.js"></script><script src="//acdn.adnxs.com/prebid/c/7045/pb.js"></script></head><body id="WNAffKOTV" class="wnContainerType-story wnCenterAlignment story"><!--Google Tag Manager - Analytics Key available for GTM implementation-->
 <script>(function(){ franklyDataLayer = window.franklyDataLayer || []; var w = window.Worldnow || {}, b = w.Beacon || null; if(b) { franklyDataLayer.push(b.get('page',{ "ua_id":'UA-82494642-27' ,"dma":'60' ,"group":'Griffin'})); } }());</script>
 <!--Google Tag Manager--><noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WV2QLD" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -245,19 +245,10 @@ wng_pageInfo.ads["52"]={id:"52",wnsz:"52",ownerinfo:{oldformat:1,owner:'loc',spl
 			303 N. Boston Ave.<br>
 			Tulsa, OK 74103<br>
 		</div>
-		<div class="trademarks" style="font: 10px Georgia, Times New Roman, 
-
-serif; color: #ffffff;">TULSA'S OWN<sup style="font-size: 6px"> TM</sup></div>
-		<div class="trademarks" style="font: 10px Georgia, Times New Roman, 
-
-serif; color: #ffffff;">GREEN COUNTRY'S OWN<sup style="font-size: 6px"> TM</sup></div>
 		<div class="desc">
-			Oklahoma's Own Newson6.com is proud to provide Oklahomans with 
+			Newson6.com is proud to provide Oklahomans with timely and relevant news and 
 
-timely and relevant news and information, sharing the stories, pictures and loves of 
-
-Oklahomans across our great state including Tulsa's Own and Green Country's Own.
-	</div>
+information, sharing the stories, pictures and loves of Oklahomans across our great state.</div>
 <div class="desc">
     <a href="https://stations.fcc.gov/station-profile/kotv-dt" title="Read News On 6's 
 
@@ -323,11 +314,12 @@ Inspection Files</a>
 	</div>
 	<div class="wnClear" style="clear: both"></div>
 	<div class="smCopyright">
-		All content © Copyright 2000 - 2017 KOTV. All Rights 
+		All content © Copyright 2000 - 2017 KOTV. <a href="http://www.newson6.com/category/326672/the-oklahoma-traveler" target="_blank">Oklahoma Traveler™</a> is a registered trademark of Griffin Communications. All Rights 
 
-Reserved. For more information on this site, please read our <a href="/global/story.asp?&#10;&#10;s=18990">Privacy Policy</a>, and <a href="/global/story.asp?s=18991">Terms of Service</a>, and <a class="adchoice" href="//www.aboutads.info/choices" target="policy">Ad Choices</a>.
+Reserved. <br>For more information on this site, please read our <a href="/global/story.asp?&#10;&#10;s=18990">Privacy Policy</a>, and <a href="/global/story.asp?s=18991">Terms of Service</a>, and <a class="adchoice" href="//www.aboutads.info/choices" target="policy">Ad Choices</a>.
 	</div>
-</div></div></td></tr></tbody></table></div><div class="wnClear"></div></div><div class="wnClear"></div><!--END WNCopyright--></div><div id="WNFooterScripts"></div><!--END WNFooter-->
+</div>
+</div></td></tr></tbody></table></div><div class="wnClear"></div></div><div class="wnClear"></div><!--END WNCopyright--></div><div id="WNFooterScripts"></div><!--END WNFooter-->
 <!--
                 Page Include: BODY--><script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script><script type="text/javascript">_qacct="p-7e_abFg340Skg";quantserve();</script><noscript><a href="http://www.quantcast.com/p-7e_abFg340Skg" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-7e_abFg340Skg.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/></a></noscript><script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script><script type="text/javascript">try {var pageTracker = _gat._getTracker("UA-572554-5");pageTracker._trackPageview();} catch(err) {}</script><!--
                 END Page Include: BODY-->
