--- a/v/ve/ves/vesselfinder.com.html
+++ b/v/ve/ves/vesselfinder.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vesselfinder.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606192649id_/https%3A//www.vesselfinder.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vesselfinder.com privacy policy that was archived on 2017-09-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170901223049id_/https%3A//www.vesselfinder.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="csstransforms csstransforms3d csstransitions" lang="en"><head>
 <meta charset="utf-8">
@@ -29,7 +29,7 @@
 <link rel="alternate" hreflang="vi" href="https://www.vesselfinder.com/vi/privacy"><link rel="search" type="application/opensearchdescription+xml" title="VesselFinder" href="https://www.vesselfinder.com/vesselfinder.xml">
 <link rel="shortcut icon" href="/favicon2.ico">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<link href="https://static.vesselfinder.net/css/app.css?2.9537m72a40" rel="stylesheet" type="text/css">
+<link href="https://static.vesselfinder.net/css/app.css?2.9537m73a4" rel="stylesheet" type="text/css">
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -37,16 +37,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-27021448-6', 'vesselfinder.com');
 ga('send', 'pageview');
-</script><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-var mnw11;var h11;if(typeof(window.innerWidth) === 'number'){mnw11=window.innerWidth;}else if(document.documentElement && (document.documentElement.clientWidth)){mnw11=document.documentElement.clientWidth;}else if(document.body && (document.body.clientWidth)){mnw11 = document.body.clientWidth;}
-if(mnw11<927) {
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-7787898993122907",
-    enable_page_level_ads: true
-  });}
-</script>
-</head>
+</script></head>
 <body class="antialiased" itemscope="" itemtype="http://schema.org/WebPage"><meta itemprop="url" content="https://www.vesselfinder.com">
 <div id="inner-wrap"><div id="outer-wrap">
 <header id="top">
@@ -317,5 +308,5 @@ if(mnw11<927) {
 </div></div><div class="downfooter"><div class="layout-row"><div class="col-footer"><div class="row"><div class="small-12 columns"><p>This website uses cookies. By using our services, you agree to our use of cookies. <a class="underlined" href="/privacy">Privacy policy</a></p><p></p></div></div></div></div></div></footer></div></div>
 <script type="text/javascript">var domainname="www.vesselfinder.com";var lang_prefix="";var pu=false;</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="https://static.vesselfinder.net/js/framework.js?2.9537m72a40"></script>
+<script type="text/javascript" src="https://static.vesselfinder.net/js/framework.js?2.9537m73a4"></script>
 </body></html>
