--- a/c/cs/csi/csis.org.html
+++ b/c/cs/csi/csis.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the csis.org privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606205634id_/https%3A//www.csis.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the csis.org privacy policy that was archived on 2017-09-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170902141310id_/https%3A//www.csis.org/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en" dir="ltr" prefix="content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#"><head>
     <meta charset="utf-8">
@@ -34,11 +34,11 @@
 <link rel="stylesheet" href="https://www.csis.org/s3fs-css/css/css_xLFDRTFqZTZeUg7Pab0gP4cpz5TWo3PCH-KBo_HKQ6A.css" media="all">
 
 <!--[if gte IE 9]><!-->
-<link rel="stylesheet" href="https://www.csis.org/s3fs-css/css/css_GeioJHI7XTUR8zczpIGpxH3KI1tqH11fbsPuPisN0Oc.css" media="all">
+<link rel="stylesheet" href="https://www.csis.org/s3fs-css/css/css_oJIh3kB3jsAdfVo3Rg6OQgATcHCk39aH6kNrQgZke3c.css" media="all">
 <!--<![endif]-->
 
 <!--[if lt IE 9]>
-<link rel="stylesheet" href="https://www.csis.org/s3fs-css/css/css_2dlS4YvN-Rx7tNiEvP2BjdhMqSr1fXIZPXDNbKnPnoU.css" media="all" />
+<link rel="stylesheet" href="https://www.csis.org/s3fs-css/css/css_c4_6WnhScBiNG2kC8TYTC0eNTJrZCvibGtdkOGmvkBs.css" media="all" />
 <![endif]-->
 
     <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-MNGQTH"></script><script src="//use.typekit.net/zyg0duc.js"></script>
@@ -49,7 +49,7 @@
 <script src="https://www.csis.org/s3fs-js/js/js_D2V_DLMKUCEf3q0fks2oL-R4R2DGAE5VLOoa_IahKao.js"></script>
 <script src="https://www.csis.org/s3fs-js/js/js_gb0r9o5CczvmVJY2sYcncrtlfnaeN6GmBmC7I8hUDuY.js"></script>
 <script>
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"csis_theme","theme_token":"bKOn_8w8v-UFGafPGaubSRJnMDz8WI5_wEWoaM4TkvY","css":{"sites\/all\/modules\/contrib\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/contrib\/youtube\/css\/youtube.css":1,"sites\/all\/modules\/contrib\/asset\/css\/assets.css":1,"sites\/all\/modules\/contrib\/ckeditor\/css\/ckeditor.css":1,"sites\/all\/modules\/contrib\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/contrib\/panels\/css\/panels.css":1,"sites\/all\/themes\/csis_theme\/css\/styles.css":1,"sites\/all\/themes\/csis_theme\/css\/no-mq.css":1},"js":{"sites\/all\/themes\/csis_theme\/js\/fastclick.min.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/contrib\/admin_menu\/admin_devel\/admin_devel.js":1,"sites\/all\/modules\/contrib\/spamspan\/spamspan.js":1,"sites\/all\/themes\/csis_theme\/js\/jquery.hoverIntent.min.js":1,"sites\/all\/themes\/csis_theme\/js\/mobile-menu.js":1,"sites\/all\/themes\/csis_theme\/js\/main-menu.js":1,"sites\/all\/themes\/csis_theme\/js\/accordion-pane.js":1,"sites\/all\/themes\/csis_theme\/js\/event-registration.js":1,"sites\/all\/themes\/csis_theme\/js\/eq.polyfilled.min.js":1}}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"csis_theme","theme_token":"IP7qZsegW21uqrRi4JzsXrLig4gisU-YgqCI1ItXAJ4","css":{"sites\/all\/modules\/contrib\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/contrib\/youtube\/css\/youtube.css":1,"sites\/all\/modules\/contrib\/asset\/css\/assets.css":1,"sites\/all\/modules\/contrib\/ckeditor\/css\/ckeditor.css":1,"sites\/all\/modules\/contrib\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/contrib\/panels\/css\/panels.css":1,"sites\/all\/themes\/csis_theme\/css\/styles.css":1,"sites\/all\/themes\/csis_theme\/css\/no-mq.css":1},"js":{"sites\/all\/themes\/csis_theme\/js\/fastclick.min.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/contrib\/admin_menu\/admin_devel\/admin_devel.js":1,"sites\/all\/modules\/contrib\/spamspan\/spamspan.js":1,"sites\/all\/themes\/csis_theme\/js\/jquery.hoverIntent.min.js":1,"sites\/all\/themes\/csis_theme\/js\/mobile-menu.js":1,"sites\/all\/themes\/csis_theme\/js\/main-menu.js":1,"sites\/all\/themes\/csis_theme\/js\/accordion-pane.js":1,"sites\/all\/themes\/csis_theme\/js\/event-registration.js":1,"sites\/all\/themes\/csis_theme\/js\/eq.polyfilled.min.js":1}}});
 </script>
   </head>
   <body class="not-front not-logged-in node-type-page path-privacy-policy section-privacy-policy page-panels">
@@ -113,6 +113,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <li class="nav__item"><a href="/topics/defense-and-security/defense-strategy-and-capabilities" title="Defense Strategy and Capabilities" class="nav__link">Defense Strategy and Capabilities</a></li>
 <li class="nav__item"><a href="/topics/defense-and-security/geopolitics-and-international-security" title="Geopolitics and International Security" class="nav__link">Geopolitics and International Security</a></li>
 <li class="nav__item"><a href="/topics/defense-and-security/long-term-futures" title="Long-Term Futures" class="nav__link">Long-Term Futures</a></li>
+<li class="nav__item"><a href="https://www.csis.org/topics/cybersecurity-and-technology/space" class="nav__link">Space</a></li>
 <li class="nav__item"><a href="/topics/defense-and-security/weapons-mass-destruction-proliferation" title="Weapons of Mass Destruction Proliferation" class="nav__link">Weapons of Mass Destruction Proliferation</a></li>
 </ul></li>
 <li class="nav__item has-children has-subnav"><a href="/topics/economics" title="Economics" class="nav__link">Economics</a><ul class="nav nav--subnav"><li class="nav__item"><a href="/topics/economics/asian-economics" title="Asian Economics" class="nav__link">Asian Economics</a></li>
@@ -162,8 +163,9 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <li class="nav__item"><a href="/regions/russia-and-eurasia/europe/post-soviet-europe" title="Post-Soviet Europe" class="nav__link">Post-Soviet Europe</a></li>
 <li class="nav__item"><a href="/regions/middle-east/europe/turkey" title="Turkey" class="nav__link">Turkey</a></li>
 </ul></li>
-<li class="nav__item has-children has-subnav"><a href="/regions/middle-east" title="Middle East" class="nav__link">Middle East</a><ul class="nav nav--subnav"><li class="nav__item"><a href="/regions/middle-east/politics-economics-and-society" title="Politics, Economics, and Society" class="nav__link">Politics, Economics, and Society</a></li>
-<li class="nav__item"><a href="/regions/middle-east/military-and-security-issues" title="Military and Security Issues" class="nav__link">Military and Security Issues</a></li>
+<li class="nav__item has-children has-subnav"><a href="/regions/middle-east" title="Middle East" class="nav__link">Middle East</a><ul class="nav nav--subnav"><li class="nav__item"><a href="/regions/middle-east/gulf" title="The Gulf" class="nav__link">The Gulf</a></li>
+<li class="nav__item"><a href="/regions/middle-east/egypt-and-levant" title="Egypt and the Levant" class="nav__link">Egypt and the Levant</a></li>
+<li class="nav__item"><a href="/regions/middle-east/north-africa" title="North Africa" class="nav__link">North Africa</a></li>
 </ul></li>
 <li class="nav__item has-children has-subnav"><a href="/regions/russia-and-eurasia" title="Russia and Eurasia" class="nav__link">Russia and Eurasia</a><ul class="nav nav--subnav"><li class="nav__item"><a href="/regions/russia-and-eurasia/south-caucasus" title="The South Caucasus" class="nav__link">The South Caucasus</a></li>
 <li class="nav__item"><a href="/regions/russia-and-eurasia/central-asia" title="Central Asia" class="nav__link">Central Asia</a></li>
@@ -191,7 +193,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <li class="nav__item"><a href="/analysis?=&amp;type=publication&amp;field_publication_type%5B1%5D=1241" class="nav__link">Transcripts</a></li>
 </ul>
   </nav><nav id="block-menu-block-main-dropdown" class="block block--main-menu-dropdown block--menu-block block--menu-block-main-dropdown" role="navigation">    <h2 class="element-invisible block__title">Main menu</h2>  <ul class="nav nav--main-menu nav--menu-block-main-dropdown has-parent-mlid-0 is-level-1 has-depth-2">
-  <li class="nav__item has-children has-subnav"><a href="/about-us" class="nav__link">About Us</a><ul class="nav nav--subnav"><li class="nav__item"><a href="/about-us/2016-annual-report" class="nav__link">2016 Annual Report</a></li>
+  <li class="nav__item has-children has-subnav"><a href="/about-us" class="nav__link">About Us</a><ul class="nav nav--subnav"><li class="nav__item"><a href="/annual-report-2016" class="nav__link">2016 Annual Report</a></li>
 <li class="nav__item"><a href="/about-us/csis-headquarters" class="nav__link">CSIS Headquarters</a></li>
 <li class="nav__item has-children"><a href="/about-us/board-trustees" class="nav__link">Board of Trustees</a></li>
 <li class="nav__item"><a href="/about-us/counselors" class="nav__link">Counselors</a></li>
@@ -261,6 +263,8 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <li class="nav__item"><a href="/analysis" class="nav__link">Analysis</a></li>
 <li class="nav__item"><a href="/podcasts" class="nav__link">Podcasts</a></li>
 <li class="nav__item"><a href="/programs/dracopoulos-ideas-lab" class="nav__link">iDeas Lab</a></li>
+<li class="nav__item"><a href="/analysis?=&amp;type=publication&amp;field_publication_type%5B1%5D=1241" class="nav__link">Transcripts</a></li>
+<li class="nav__item"><a href="/about-us" class="nav__link">About Us</a></li>
 <li class="nav__item"><a href="/support-csis" class="nav__link">Support Us</a></li>
 </ul>
   </nav>  </div>
